<resources>
    <string name="app_name">COVID-19 TRACKER</string>
    <string name="log_in">Sign In</string>
    <string name="log_signUp">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_pwd">Password</string>
    <string name="hint_oldPwd">Previous Password</string>
    <string name="hint_newPwd">New Password</string>
    <string name="hint_forgotPassword">Forgot Password?</string>
    <string name="msg_forgotPassWord">Password changed successfully. Back to SignIn</string>
    <string name="msg_email_sent">Password change mail has been sent to your email address. Please click the link to change password.</string>
    <string name="msg_backToSignIn">Back to SignIn</string>
    <string name="btn_forgotPassWord">Send Mail</string>
    <string name="link_signIn">Go To SignIn</string>
    <string name="txt_global">Global</string>
    <string name="txt_SignOut">Sign Out</string>
    <string name="txt_view_detail">View Detail</string>
    <string name="txt_update_db">Update Database</string>
    <string name="txt_country">Country</string>
    <string name="txt_city">City</string>
    <string name="txt_active_cases">Active Cases</string>
    <string name="txt_confirmed_cases">Confirmed Cases</string>
    <string name="txt_recovered_cases">Recovered Cases</string>
    <string name="txt_death_cases">Death Cases</string>
    <string name="common_test_cases">Test Cases</string>
    <string name="welcome_msg">Welcome to the Covid Tracker App. Here you can view useful Covid19 updates!!</string>
    <string name="covid_link">View Covid Tracker</string>
    <string name="content_msg">Add City Record</string>
    <!--- FaceBook Link-->
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    //Adding Strings
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="total">Confirmed</string>
    <string name="deaths">Deaths</string>
    <string name="covid_19">Covid-19 Global</string>
    <string name="country">Country</string>
    <string name="cases">Cases</string>
    <string name="increment_number">+232325</string>
    <string name="number">2323236544</string>

    <string name="default_country">United States</string>
</resources>