<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="myViewModel"
        type="com.emonics.covid19trackertest.viewModel.AdminViewModel" />
</data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    android:gravity="center"
    tools:context=".activities.AdminActivity"
    android:layout_margin="10dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_covid_tracker"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold|normal|italic"
        android:textColor="@color/darkerGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_global"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/toggle_blue"
                android:paddingTop="40dp"
                />
            <TextView
                android:id="@+id/tvViewDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_view_detail"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/toggle_blue"
                android:paddingTop="20dp"
                />
            <TextView
                android:id="@+id/tvUpdateDb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_update_db"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/toggle_blue"
                android:paddingTop="20dp"
                />
           <!-- <TextView
                android:id="@+id/tvSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
                android:gravity="right"
            android:text="@string/txt_SignOut"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingTop="40dp"
                android:linksClickable="true"
            />-->
        </LinearLayout>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_country"/>
            <Spinner
                android:id="@+id/spCountry"
                android:layout_width="wrap_content"
                android:spinnerMode="dialog"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/spCountrySelectedItem"
                android:text="@={myViewModel.inputCountrySelected}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_city"/>
            <Spinner
                android:id="@+id/spCity"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/spCitySelectedItem"
                android:text="@={myViewModel.inputCitySelected}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_active_cases"/>
            <EditText
                android:id="@+id/edActiveCases"
                android:text="@={myViewModel.inputActiveCases}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_confirmed_cases"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={myViewModel.inputConfirmedCases}"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_recovered_cases"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={myViewModel.inputRecoveredCases}"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_death_cases"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={myViewModel.inputDeathCases}"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/common_test_cases"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={myViewModel.inputTestCases}"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/btnClearAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@={myViewModel.clearAllButtonOrDeleteText}"
                android:textColor="@color/white"

                android:visibility="gone"></Button>

            <Space
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSaveOrUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="@{()->myViewModel.saveOrUpdate()}"
                android:text="@={myViewModel.saveOrUpdateButtonText}"
                android:textColor="@color/white"></Button>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TableRow>
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/tvSignOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|bottom"
                        android:background="@color/white"
                        android:src="@drawable/ic_logout"
                        android:contentDescription="@string/covid_link"
                        android:layout_margin="16dp" />
                    <Space android:layout_height="match_parent"
                        android:layout_width="100dp"></Space>
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:id="@+id/btnBack"
                        android:layout_gravity="end|bottom"
                        android:background="@color/white"
                        android:src="@drawable/ic_back"
                        android:contentDescription="@string/covid_link"
                        android:layout_margin="16dp" />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</layout>
