<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellowLight"
    tools:context=".activities.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_covid_tracker"
        android:layout_marginTop="25dp" />
    <TextView
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold|normal|italic"
        android:textColor="@color/darkerGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/forgetPasswordLayout"

        app:cardCornerRadius="25dp"
        app:cardElevation="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <LinearLayout
                android:background="@color/white"
                android:padding="25dp"
                android:gravity="center"
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_forgotPassword"
                    android:textSize="20sp"
                    android:textColor="@color/toggle_blue"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/hint_email"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:hintTextColor="#4E4A4A"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textEmailAddress"
                        android:id="@+id/edEmailForgotPassword"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/ededEmailForgotPasswordError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/changePassword"
                    android:text="@string/btn_forgotPassWord"
                    android:textSize="17sp"
                    android:textAllCaps="false"
                    android:elevation="15dp"
                    android:gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center"
                    app:shapeAppearanceOverlay="@style/Button5"
                    app:backgroundTint="@color/toggle_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/LnAfterMailSentLayOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_email_sent"
                    android:textColor="@color/toggle_blue"
                    android:textSize="20sp" />


            </LinearLayout>
    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:gravity="center"
        android:text="@string/msg_backToSignIn"
        android:textColor="@color/toggle_blue"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>
