<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellowLight"
    tools:context=".activities.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_covid_tracker"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold|normal|italic"
        android:textColor="@color/darkerGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/forgetPasswordLayout"
                android:background="@color/white"
                android:padding="25dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/hint_oldPwd"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:hintTextColor="#4E4A4A"
                    app:boxStrokeColor="#4E4A4A"
                    app:endIconMode="password_toggle"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/edPassword"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/edOldPasswordError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/hint_newPwd"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:hintTextColor="#4E4A4A"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/edConfirmedPassword"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/edNewPasswordError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/changePassword"
                    android:text="@string/btn_forgotPassWord"
                    android:textSize="17sp"
                    android:textAllCaps="false"
                    android:elevation="15dp"
                    android:gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center"
                    app:shapeAppearanceOverlay="@style/Button5"
                    app:backgroundTint="@color/toggle_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_signIn"
                android:layout_margin="6dp"
                android:autoLink="all"
                android:id="@+id/linkSingnIn"
                android:textStyle="bold"
                android:textColor="@color/toggle_blue"
                android:gravity="center"
                />
            <LinearLayout
                android:id="@+id/forgotPasswordSuccessLayout"
                android:background="@color/white"
                android:padding="25dp"
                android:visibility="gone"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_forgotPassWord"
                    android:textColor="@color/toggle_blue"
                    android:textSize="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_backToSignIn"
                    android:layout_margin="6dp"
                    android:autoLink="all"
                    android:id="@+id/linkSingnInSuccess"
                    android:textStyle="bold"
                    android:textColor="@color/toggle_blue"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>



    </androidx.cardview.widget.CardView>

</LinearLayout>
